syntax = "proto3";

package com.jindi.infra.benchmark;

option java_multiple_files = true;

message LabelDTO {

  int32 no = 1;
  string name = 2;
}